@@ -1,0 +1,135 @@
+	AREA Data, DATA, READONLY
+
+	[ :LNOT:REFERENCE
+
+	; SHR
+	DCD &80000000:SHR:0
+	DCD &80000000:SHR:4
+	DCD &80000000:SHR:31
+	DCD &80000000:SHR:32
+	DCD &80000000:SHR:36
+	DCD &80:SHR:-1
+
+	; >>
+	[ {TRUE}	; Extension
+	DCD &80000000>>0
+	DCD &80000000>>4
+	DCD &80000000 >> 31
+	DCD &80000000 >> 32
+	DCD &80000000 >> 36
+	DCD &80 >> -1
+	]
+
+	; >>>
+	[ {TRUE}	; Extension
+	DCD &80000000>>>0
+	DCD &08000000 >>> 4
+	DCD &80000000 >>> 8
+	DCD &80000000 >>> 31
+	DCD &80000000 >>> 32
+	DCD &00008000 >>> 36
+	DCD &80 >>> -1
+	DCD &80000000 >>> -1
+	]
+
+	; SHL
+	DCD 1:SHL:0
+	DCD 1:SHL:4
+	DCD 1:SHL:31
+	DCD 1:SHL:32
+	DCD 1:SHL:36
+	DCD &80:SHL:-1
+
+	; <<
+	[ {TRUE}	; Extension
+	DCD 1<<0
+	DCD 1<<4
+	DCD 1 << 31
+	DCD 1 << 32
+	DCD 1 << 36
+	]
+
+	; ROL
+	DCD 1:ROL:0
+	DCD 1:ROL:4
+	DCD 1:ROL:31
+	DCD 1:ROL:32
+	DCD 1:ROL:36
+	DCD &80:ROL:-1
+
+	; ROR
+	DCD &80000000:ROR:0
+	DCD &80000000:ROR:4
+	DCD &80000000:ROR:31
+	DCD &80000000:ROR:32
+	DCD &80000000:ROR:36
+	DCD &80:ROR:-1
+
+	|
+
+	; SHR
+	DCD &80000000
+	DCD &08000000
+	DCD &00000001
+	DCD 0
+	DCD 0
+	DCD 0
+
+	; >>
+	[ {TRUE}	; Extension
+	DCD &80000000
+	DCD &08000000
+	DCD &00000001
+	DCD 0
+	DCD 0
+	DCD 0
+	]
+
+	; >>>
+	[ {TRUE}	; Extension
+	DCD &80000000
+	DCD &00800000
+	DCD &FF800000
+	DCD -1
+	DCD -1
+	DCD 0
+	DCD 0
+	DCD -1
+	]
+
+	; SHL
+	DCD 1
+	DCD &10
+	DCD &80000000
+	DCD 0
+	DCD 0
+	DCD 0
+
+	; <<
+	[ {TRUE}	; Extension
+	DCD 1
+	DCD &10
+	DCD &80000000
+	DCD 0
+	DCD 0
+	]
+
+	; ROL
+	DCD 1
+	DCD &10
+	DCD &80000000
+	DCD 1
+	DCD &10
+	DCd &40
+
+	; ROR
+	DCD &80000000
+	DCD &08000000
+	DCD 1
+	DCD &80000000
+	DCD &08000000
+	DCD &100
+
+	]
+
+	END
